--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-i18n": "4.1.2",
+    "@strapi/plugin-seo": "^1.7.2",
     "@strapi/plugin-users-permissions": "4.1.2",
     "@strapi/provider-upload-cloudinary": "^4.1.2",
     "@strapi/strapi": "4.1.2",
