--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-graphql": "4.1.2",
-    "@strapi/plugin-i18n": "4.1.2",
-    "@strapi/plugin-seo": "^1.7.2",
-    "@strapi/plugin-users-permissions": "4.1.2",
-    "@strapi/provider-upload-cloudinary": "^4.1.2",
-    "@strapi/strapi": "4.1.2",
+    "@strapi/strapi": "4.4.0",
+    "@strapi/plugin-users-permissions": "4.4.0",
+    "@strapi/plugin-graphql": "4.4.0",
+    "@strapi/plugin-i18n": "4.4.0",
+    "@strapi/provider-upload-cloudinary": "^4.4.0",
+    "@strapi/plugin-seo": "^1.7.5",
     "fs": "^0.0.1-security",
     "pg": "^8.7.3",
     "pg-connection-string": "^2.5.0",
-    "sqlite3": "5.0.2",
+    "better-sqlite3": "7.4.6",
     "uuidv4": "^6.2.12"
   },
   "author": {
