--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@ckeditor/strapi-plugin-ckeditor": "^0.0.7",
     "@strapi/plugin-color-picker": "^4.9.0",
     "@strapi/plugin-graphql": "4.10.1",
     "@strapi/plugin-i18n": "4.10.1",
