--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop",
+    "dev": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
@@ -32,7 +32,7 @@
   },
   "engines": {
     "node": ">=16.x.x <=18.x.x",
-    "npm": ">=7.x.x"
+    "npm": ">=8.19.3"
   },
   "license": "MIT"
 }
