fix heroku npm build failure

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "engines": {
     "node": ">=16.x.x <=18.x.x",
-    "npm": "8.11.0"
+    "npm": ">=8.x.x <=9.x.x"
   },
   "license": "MIT"
 }
